<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBackgroundPrimary"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgroundPrimary"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="240dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#000DFF"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="22dp"
                    android:src="@drawable/white_user_circle_24dp" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackgroundPrimary"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <!-- Name Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/et_reg_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_txt_name"
                android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Username Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/et_reg_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_txt_username"
                android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/et_reg_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_txt_password"
                android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Signup Button -->
            <Button
                android:id="@+id/btn_reg_sign_up"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@color/colorButtonPrimary"
                android:padding="12dp"
                android:text="@string/app_btn_register"
                android:textColor="@color/colorTextPrimary"/>

            <TextView
                android:id="@+id/txt_reg_link_login"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/app_txt_register_do"
                android:textSize="11dip" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>